--- a/lunch-client/styles/components/calendar.scss
+++ b/lunch-client/styles/components/calendar.scss
@@ -49,6 +49,7 @@
 
 .calendar-grid-item {
     position: relative;
+    padding: 16px;
     flex: 0 14.28571%;
     max-width: 14.28571%;
     text-align: center;
