--- a/lunch-client/styles/components/header.scss
+++ b/lunch-client/styles/components/header.scss
@@ -28,7 +28,7 @@
             .logo {
                 width: 38px;
                 vertical-align: middle;
-                @media (max-width: 320px) {
+                @media (max-width: 360px) {
                     width: 26px;
                 }
             }
@@ -63,7 +63,7 @@
                     color: $border-color;
                     border-bottom: 2px solid #000;
                 }
-                @media (max-width: 320px) {
+                @media (max-width: 360px) {
                     padding: 4px 0;
                     font-size: 12px;
                 }
