--- a/lunch-client/styles/pages/home.scss
+++ b/lunch-client/styles/pages/home.scss
@@ -1,9 +1,13 @@
 .home {
-    height: 100%;
+    min-height: 100%;
     position: relative;
 
     .bg-pasta {
-        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
         background: url(/static/images/bg-pasta.jpg) no-repeat center center fixed;
         background-size: cover;
     }
@@ -20,6 +24,7 @@
 
     .hello {
         position: absolute;
+        z-index: 10;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
